# wpguard

./: .gitignore  .mcp.json  ADDEXPERT_README.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_PROMPTS_PIPELINE_CONFIG_EXAMPLES.md  LICENSE  README.md  WORDFENCE_SCOPE.md  cve_research_tracker.json  pyproject.toml  wpguard_findings.json
.claude/agent-memory/cve-researcher/: MEMORY.md  project_code_injection_research.md  project_deserialization_research.md  project_file_ops_research.md  project_open_redirect_research.md  project_race_logic_infodisclosure_research.md  project_ssrf_xxe_research.md
.claude/agents/cve-researcher/: agent.md
.claude/commands/: pm.md
docs/: claude-code-features.md  core-research-plan.md
research/: wp2shell-rce-chain.md
security-research/: run_pipeline.sh
security-research/agents/qa-triager/: CLAUDE.md
security-research/agents/security-researcher/: CLAUDE.md
security-research/agents/target-researcher/: CLAUDE.md
security-research/config/: excluded_vendors.txt  wordfence_scope.yaml
specs/: 000_index.md  001_pipeline_enhancements.md  002_scope_auto_validation.md  003_target_sync.md  004_cve_integration.md  005_sandbox_improvements.md  006_process_management.md  007_reporting_enhancements.md  008_new_mcp_tools.md  009_expert_agent_improvements.md  010_wordfence_bugbounty_rules.md
src/wpguard/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py
src/wpguard/api/: __init__.py  themes.py  wordfence.py  wordpress.py  wordpress_core.py
src/wpguard/core/: __init__.py  audit_history.py  bounty.py  checkpoint.py  deps.py  downloader.py  findings.py  init.py  models.py  pipeline.py  regression.py  sandbox.py  scope_validator.py  scoring.py  watcher.py
src/wpguard/notifications/: __init__.py  discord.py
src/wpguard/semgrep_rules/: __init__.py  progpilot-wordpress.yml  progpilot-wp-sanitizers.json  progpilot-wp-sinks.json  progpilot-wp-sources.json  wordpress-security.yaml
src/wpguard/templates/: CLAUDE.md  __init__.py  _expert-shared.md  auth-expert.md  bb-submission.md  code-injection-expert.md  core-subsystems.md  critical-thinker.md  csrf-expert.md  data-flow-expert.md  deserialization-expert.md  diff.md  dynamic-tracer.md  file-rce-expert.md  findings.md  idor-expert.md  impact-assessor.md  info-disclosure-expert.md  lfi-rfi-expert.md  logic-flaw-expert.md  missing-auth-expert.md  nday.md  object-injection-expert.md  open-redirect-expert.md  patrol.md  pm-plan.md  pm.md  poc-creator.md  poc-recorder.md  poc-runner.md  poc-video-recording-spec.md  poc-writer.md  priv-esc-expert.md  protocol-confusion-expert.md  qa-triage.md  race-condition-expert.md  recon.md  sandbox-admin.md  security-research.md  sqli-expert.md  (+8 more)
src/wpguard/templates/poc-templates/: template_ajax_auth.py  template_ajax_nopriv.py  template_file_upload.py  template_rest_auth.py  template_rest_nopriv.py
src/wpguard/utils/: __init__.py  helpers.py
src/wpguard/wordpress_instance/: Dockerfile  custom-entrypoint.sh  docker-compose.yaml  php-custom.ini  wpguard-php-extensions.conf  wpguard-sink-trace.php  wpguard-xdebug.ini
wordpress_instance/: DOCKER.md  custom-entrypoint.sh
