[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpguard"
dynamic = ["version"]
description = "Agentic security research framework for WordPress plugins and themes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "0xQRx"}
]
keywords = ["wordpress", "security", "plugins", "monitoring", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/0xQRx/wpguard"
Repository = "https://github.com/0xQRx/wpguard"
Issues = "https://github.com/0xQRx/wpguard/issues"

[project.scripts]
wpguard = "wpguard.cli:main"
wpguard-mcp = "wpguard.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.dynamic]
version = {attr = "wpguard.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wpguard = ["py.typed", "templates/*.md", "templates/poc-templates/*.py", "semgrep_rules/*.yaml", "semgrep_rules/*.py", "wordpress_instance/**/*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
